--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
+# FastAPI env
+APP_MODULE=server.app:app
+HOST=0.0.0.0
+PORT=8000
+
 # Set this to the hostname that you intend to run the service at
 HOSTNAME="example.com"
 
 # You can obtain it by publishing of feed (run publish_feed.py)
-WHATS_ALF_URI="at://did:plc:abcde.../app.bsky.feed.generator/example-fid-name..."
+FEED_URI="at://did:plc:abcde.../app.bsky.feed.generator/example-fid-name..."
 
 # Only use this if you want a service did different from did:web
 # SERVICE_DID="did:plc:abcde..."
