--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 atproto==0.0.53
 peewee~=3.16.2
-Flask~=2.3.2
+fastapi==0.115.2
 python-dotenv~=1.0.0
+json_logic==0.6.3
+sentence_transformers==3.2.1
+uvicorn==0.32.0
