big push to add basic layout of modules for filtering

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.9'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: sky-feeder-app
+    volumes:
+      - ./app:/usr/src/app
     env_file:
       - .env
     ports:
