--- a/algo_manifest.json
+++ b/algo_manifest.json
@@ -1,28 +1,46 @@
 {
-  "and": [
+  "filter": {
+    "and": [
+      {
+        "regex_matches": [
+          {"var": "text"},
+          "\\bimportant\\b"
+        ]
+      },
+      {
+        "regex_negation_matches": [
+          {"var": "text"},
+          "\\bunwanted_term\\b"
+        ]
+      },
+      {
+        "text_similarity": [
+          {"var": "text"},
+          {
+            "model_name": "all-MiniLM-L6-v2",
+            "anchor_text": "This is an important update"
+          },
+          ">=",
+          0.3
+        ]
+      },
+      {
+        "model_probability": [
+          {"var": "text"},
+          {"model_name": "toxicity_model"},
+          ">=",
+          0.9
+        ]
+      }
+    ]
+  },
+  "models": [
     {
-      "regex_matches": [
-        {"var": "text"},
-        "\\bimportant\\b"
-      ]
-    },
-    {
-      "text_similarity": [
-        {"var": "text"},
-        {
-          "model_name": "all-MiniLM-L6-v2",
-          "anchor_text": "This is an important update"
-        },
-        ">=",
-        0.3
-      ]
-    },
-    {
-      "model_probability": [
-        {"var": "text"},
-        {"model_name": "toxicity_model"},
-        ">=",
-        0.9
+      "model_name": "toxicity_model",
+      "feature_modules": [
+        {"type": "time_features"},
+        {"type": "vectorizer", "model_name": "all-MiniLM-L6-v2"},
+        {"type": "post_metadata"}
       ]
     }
   ]
