--- a/algo_manifest.json.example
+++ b/algo_manifest.json.example
@@ -30,6 +30,12 @@
           ">=",
           0.9
         ]
+      },
+      {
+        "attribute_compare": [
+          {"var": "langs"},
+          "==",
+          ["en"]
       }
     ]
   },
