--- a/algo_manifest.json.example
+++ b/algo_manifest.json.example
@@ -14,6 +14,13 @@
         ]
       },
       {
+        "social_graph": [
+          "devingaffney.com",
+          "is_in",
+          "follows",
+        ]
+      },
+      {
         "text_similarity": [
           {"var": "text"},
           {
